NAE/NIM-21632 - releases/release_notes/7.8 - add ipv4 and ipv6 routing summary table support for Palo Alto

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -1,5 +1,5 @@
 ---
-description: In this section, you can find the release notes for `v7.6` releases.
+description: In this section, you can find the release notes for `v7.8` releases.
 ---
 
 # IP Fabric `v7.8`
@@ -71,17 +71,22 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
 
 #### Vendor Support and Improvements
 
-- Added IPv6 support for the Palo Alto AAA, NTP, SNMP, Syslog and OSPFv3 tasks.
-- Added IPv6 support for the Cisco NX-OS AAA, ACL, SNMP and Syslog tasks.
+- **Palo Alto**
+  - Now supports AAA, NTP, SNMP, Syslog, OSPFv3 tasks and IPv4 and IPv6 route summary tables.
+
+- **Fortinet**
+  - Now supports IPv4 and IPv6 route summary tables.
+
+- **Meraki**
+  - Now supports LAN side for firewalls and port-channel and management interface for switches.
+  - Corrected xDP interface numbering for firewalls.
+
+- **Cisco**
+  - Now supports IPv6 AAA, ACL, SNMP and Syslog tasks on NX-OS and IPv6 route summary tables on ASA, ACI, IOS XR, NX-OS.
+
 - **Aruba IAP - AOS 10+**
   - Virtual Controllers are no longer created as devices in IP Fabric due to architectural changes introduced in AOS 10.
   - The cluster group name is now displayed in a new column, `AP Cluster Name`, within the table: `Technology/Wireless/Access points`.
-- Added support for Fortinet IPv4 and IPv6 route summary tables.
-- Added support for Cisco ASA, ACI, IOS XR, NX-OS, FTD and Palo Alto IPv6 route summary tables.
-- Added port-channel support and management interface for Meraki switches.
-- Fixed xDP interface numbering for Meraki firewalls.
-- Added switchport support on the LAN side of Meraki firewalls.
-
 
 ### API Changes
 
