fixup as per NAE request

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -50,8 +50,9 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
  
 #### Path Lookup
 
-#### Cloud
-- **New device icons** for the AWS and Azure clouds in network and path-lookup diagrams to improve navigation.
+##### Cloud
+-
+ **New device icons** for the AWS and Azure clouds in network and path-lookup diagrams to improve navigation.
 
 ![AWS icons](../../images/miscellaneous/IP_Fabric_GUI-network-viewer-device-aws-icons.webp) ![](../../images/miscellaneous/IP_Fabric_GUI-network-viewer-device-azure-icons.webp)
 
@@ -69,6 +70,10 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
     - Azure Firewall deployed in vWAN is not supported.
 - Added support for GCP interconnect.
 
+##### Meraki
+
+- Path lookup now enabled for Meraki networks for certain topologies. For more details see [Meraki notes for Path lookup.](../../IP_Fabric_GUI/diagrams/vendors/meraki.md).
+
 #### Vendor Support and Improvements
 
 - **Palo Alto**
@@ -78,7 +83,7 @@ A new **IPv6 Managed IP Summary** table has been added under **Technology → Ad
   - Now supports IPv4 and IPv6 route summary tables.
 
 - **Meraki**
-  - Now supports LAN side for firewalls and port-channel and management interface for switches.
+  - Now supports switchports on LAN side for firewalls, port-channel and management interface for switches.
   - Corrected xDP interface numbering for firewalls.
 
 - **Cisco**
