NIM-22254 Adds known issue about GCP interconnect

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -15,7 +15,9 @@ description: In this section, you can find the release notes for `v7.8` releases
 
 ## Known Issues
 
-.
+### Google Cloud Platform (GCP)
+
+- For GCP interconnect paths, the Cloud Router (control plane) appears in the path lookup. This will be updated in a future release.
 
 ## `v7.8.X` (UNRELEASED)
 
