--- a/docs/releases/release_notes/7.3.md
+++ b/docs/releases/release_notes/7.3.md
@@ -48,24 +48,33 @@ issue is resolved in one of the upcoming releases.
 
 ![Disable NAT44 discovery task for FortiGate](../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_forti_nat44.webp)
 
-## v7.3.23 (November 10th, 2025; GA)
+## v7.3.24 (November 27th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-3-23+0.tar.zst.sig) = cafeadd00a5e5aea8018ebfeb4c8351d58ad25ad0f6c2005d54263eb6ae7219f
-MD5 (ipfabric-update-7-3-23+0.tar.zst.sig) = 8bf98d13949d624ac5e9cead97b4f0e3
-SHA256 (ipfabric-7-3-23+0.qcow2) = abdf242b63c4ffab7563bb71f85785bd7ee011f43b05ea16c05c9816c60a3635
-MD5 (ipfabric-7-3-23+0.qcow2) = 109729a22920afbda72d29d0f6178ef2
-SHA256 (ipfabric-7-3-23+0.vmdk) = ff6c5d49efd83c3ff8ecfd3cd3dc37e530802d153d51eec2900c29d38571ef6d
-MD5 (ipfabric-7-3-23+0.vmdk) = 9a8a78af482228775e373067fe24f54c
-SHA256 (ipfabric-7-3-23+0.vhdx.zst) = 69ff5fea8aced997387d84192c9580753b2bd8dd8e6f86f4ee81ed3c43eba64d
-MD5 (ipfabric-7-3-23+0.vhdx.zst) = a3673ee188adfde6ffd79b73a4d8291f
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-23+0.ova) = 99f7f062c38c940ed8fcf046b1638c277883e062f6dc0f93f0c6d70b54d428a3
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-23+0.ova) = df81da296726702cd8c73e001ca94983
-SHA256 (unsupported-ESXi7.0-ipfabric-7-3-23+0.ova) = 6ba329b79345e0eb46368b37ed93703b6eae22f57860d55d0e9108d22c4b7db8
-MD5 (unsupported-ESXi7.0-ipfabric-7-3-23+0.ova) = 3104da01293fecb6afb252546dd7601a
-SHA256 (ESXi8.0-ipfabric-7-3-23+0.ova) = ab176e7f605d0123940c239b16185bf91969313932d9e82449a2e7bdc7f8a043
-MD5 (ESXi8.0-ipfabric-7-3-23+0.ova) = cd1347201b01f1ca898b6a76c5d3c653
+SHA256 (ipfabric-update-7-3-24+0.tar.zst.sig) = 0abea2561b048120720518a71bf38f3d725822c3067932b605a6f1e4ca834d07
+MD5 (ipfabric-update-7-3-24+0.tar.zst.sig) = 4f6ae91606fa49db0762ebcf2fe060c4
+SHA256 (ipfabric-7-3-24+0.qcow2) = 25b43573dc85ffa5bd57bcafc14bd3b9df519c8eff7d2c0d3c78c3b9b952b9dd
+MD5 (ipfabric-7-3-24+0.qcow2) = 09e9563f1e16bd4d7427b3d264541d56
+SHA256 (ipfabric-7-3-24+0.vmdk) = 4aa6329a46670f486eda38679d56b169aa616571a7b26700db712aac6c7ccf15
+MD5 (ipfabric-7-3-24+0.vmdk) = 62cfd4836931604f9851d1f88f231c7f
+SHA256 (ipfabric-7-3-24+0.vhdx.zst) = 4a225f8d80e881bc5fb5d0b4f5beaccf88e3fb788686ebb20a7f550679f51cfa
+MD5 (ipfabric-7-3-24+0.vhdx.zst) = c33a229ffa8a6e79776508f9a0c2832e
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-3-24+0.ova) = aa1bccfac882451880882b56a821425b6a9d93f974b7e3336893cef753863f51
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-3-24+0.ova) = 5b5062daee42b9cfc5bb4c13f01c3c0a
+SHA256 (unsupported-ESXi7.0-ipfabric-7-3-24+0.ova) = f2678d1e428f026dd956259392021977f29cced05d7177d80efa5cc0f94f8dac
+MD5 (unsupported-ESXi7.0-ipfabric-7-3-24+0.ova) = 4c1a9f4087a41807197c032a2fff8cca
+SHA256 (ESXi8.0-ipfabric-7-3-24+0.ova) = 16f58d9d63a0e3b8e3d3eaee8bebf207e61f17374864c43893456665611d49a3
+MD5 (ESXi8.0-ipfabric-7-3-24+0.ova) = 37820bcfb30d96d8ca893b7877dbbea7
 ```
+
+### Bug Fixes
+
+- Resolved syslog worker exiting when reaching the heap/memory limit.
+- Fixed End-to-End Path Lookup performing double 'zoneFw' evaluation with different results on Fortinet devices.
+- Resolved 'Unexpected Failure' when filtering on inventory/end-of-life-milestones/detail
+
+## v7.3.23 (November 10th, 2025; GA)
+
 
 ### Important Notice
 
