--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -6,7 +6,24 @@ search:
 
 # LLRN 7.3
 
-These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 660 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.3`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 665 fixed issues.
+
+## 7.3.24
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
+- `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results [DHL - 7.3]
+- `NIM-22038` -- High -- End2End path issue for Viptela
+- `NIM-22050` -- Highest -- EoL Filter - Unexpected Failure
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21849` -- Medium -- F5 - Missing commands in the Feature matrix
 
 ## 7.3.23
 
