ST-528 cleanup + template created

--- a/docs/releases/release_notes/7.9.md
+++ b/docs/releases/release_notes/7.9.md
@@ -1,9 +1,8 @@
 ---
-description: In this section, you can find the release notes for `v7.6` releases.
-tags: ["draft"]
+description: In this section, you can find the release notes for `v7.` releases. To see this page, please update `.pages.yml`.
 ---
 
-# IP Fabric `v7.7`
+# IP Fabric `v7.9`
 
 !!! danger "Unreleased Version"
 
@@ -18,7 +17,7 @@ tags: ["draft"]
 
 .
 
-## `v7.7.X` (UNRELEASED)
+## `v7.9.X` (UNRELEASED)
 
 .
 
@@ -26,7 +25,7 @@ tags: ["draft"]
 
 .
 
-## `v7.7.0` (UNRELEASED)
+## `v7.9.0` (UNRELEASED)
 
 .
 
