MQ-9290 LLRN, hashes and RN update for 7.5.12

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -166,24 +166,45 @@ If extensions are **not removed prior to the upgrade**, they will continue to ru
 
 - Snapshots from release `5.x` and earlier are not supported and may fail to load properly.
 
-## v7.5.11 (November 10th, 2025; GA)
+## v7.5.12 (November 27th, 2025; GA)
 
 ```
-SHA256 (ipfabric-update-7-5-11+0.tar.zst.sig) = 736baeefac1fae08d1b15b862fb430a68235009261bcefa5885c99ccf3c3fbde
-MD5 (ipfabric-update-7-5-11+0.tar.zst.sig) = 65d2973ca59bd4c5d33eeee94f5e7eee
-SHA256 (ipfabric-7-5-11+0.qcow2) = ce9d7fc0b2df9aa8f98c0784faebde01b7f00fe857ea4169de336a99184f130a
-MD5 (ipfabric-7-5-11+0.qcow2) = 5e2e8bfff678d9b0d4c34c943e6b0d28
-SHA256 (ipfabric-7-5-11+0.vmdk) = 88698891c8ff27c620d6610819968fefa37bdfd100548ed21ceb62a9f51f2efa
-MD5 (ipfabric-7-5-11+0.vmdk) = d7a35cad1dbaeae78f488c02fab0ec28
-SHA256 (ipfabric-7-5-11+0.vhdx.zst) = eef5757708e01caf5853503ddcd9f4d5e7782c00b367c4feebfaa039e9aa514a
-MD5 (ipfabric-7-5-11+0.vhdx.zst) = 03525593dd5498842d04410baf89d5f8
-SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-11+0.ova) = 6a6665852204fb99b552d4180e7ec1688ced804b0b295bcb567d2b6e1f324db8
-MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-11+0.ova) = 4f4f2d014ef64bd88ceaf3befbd8990b
-SHA256 (unsupported-ESXi7.0-ipfabric-7-5-11+0.ova) = e761c363e2fd384246a4234ebf04202053db595136278446185853b128d55fb7
-MD5 (unsupported-ESXi7.0-ipfabric-7-5-11+0.ova) = 79fa118399d4f56dcd53546f54508c93
-SHA256 (ESXi8.0-ipfabric-7-5-11+0.ova) = 77260c2604cbe9a658140a9938339267cd4c42c1ee850a36f8bf4542f17b88b7
-MD5 (ESXi8.0-ipfabric-7-5-11+0.ova) = 7bb8edb519180d1d548d71cf8aec6a81
+SHA256 (ipfabric-update-7-5-12+0.tar.zst.sig) = 9ce21a68eb00f16452738a6b5480a3b862dc4372921be49a71a59fc40612ddc5
+MD5 (ipfabric-update-7-5-12+0.tar.zst.sig) = 6dbe45dbb6a9ed6a1577748df134f4e7
+SHA256 (ipfabric-7-5-12+0.qcow2) = 3f61dac58772dc41b3815fd75c6ad36cbcb145cea5de00f147f70140c155b1a4
+MD5 (ipfabric-7-5-12+0.qcow2) = 1c513ce2cdfe2f703081f5b230133bae
+SHA256 (ipfabric-7-5-12+0.vmdk) = 860270f76c25b12d56a0553da8f5d1f0d4c9a8872118c515f4c9c775771a76e3
+MD5 (ipfabric-7-5-12+0.vmdk) = 623e559de9f2407e0701683f1ff99297
+SHA256 (ipfabric-7-5-12+0.vhdx.zst) = 6090cec03a9880fa003d1955a1bf407e2a693d0df8e899e9ef2a28f224a1b630
+MD5 (ipfabric-7-5-12+0.vhdx.zst) = b4cc971cc3b2d31125567366e6b658f1
+SHA256 (unsupported-ESXi6.7U2-ipfabric-7-5-12+0.ova) = 5191ec14279a94a6f1808a649922bd5845d164036f18fd04dcc9c663214a9b85
+MD5 (unsupported-ESXi6.7U2-ipfabric-7-5-12+0.ova) = 6e843f368df6685856c849c994f34dcf
+SHA256 (unsupported-ESXi7.0-ipfabric-7-5-12+0.ova) = 64dd16b5124255de8488700ac7abb4febf02122488878a7c667f278babc02532
+MD5 (unsupported-ESXi7.0-ipfabric-7-5-12+0.ova) = 3a278e44cf83e12c86aff188744b04a0
+SHA256 (ESXi8.0-ipfabric-7-5-12+0.ova) = a3939a02d12aba17eed56e7c4e66c0f251831e1043cd50446dae4a8994adae67
+MD5 (ESXi8.0-ipfabric-7-5-12+0.ova) = 03e8e2d60d0da5586974b3123eb7bd43
 ```
+
+### Improvements
+
+- Standardized the `Uptime` field type for CLI and API discovered devices.
+
+### Bug Fixes
+
+- Resolved `syslog worker` reaching heap limit and exiting during runs.
+- Fixed login for users with no rights to avoid the 'Unexpected Failure' error.
+- Fixed 500 'Unexpected failure' on the STP instances tab by correcting the `/v7/tables/spanning-tree/instance-members`.
+- Resolved double 'zoneFw' evaluation with differing results in End-to-End Path Lookup on Fortinet environments.
+- Fixed loading of MRoute Overview by handling `/tables/multicast/routes/overview` requests.
+- Corrected time-based filters (e.g., 'Uptime < 1 year') returning no results across tables including `/inventory/devices`.
+- Fixed missing environment information mapping on HP Comware switches.
+- Fixed IPv6 routing table collection on Cisco NX-OS when **bgpThreshold != 0** by properly handling `show ipv6 route summary vrf all` across VRFs.
+- Restored visibility and management of Extensions in the UI.
+- Resolved API failure when adding a new vendor from **Snapshot Management**.
+- Fixed parsing and display of `ip helper-address` for Arista EOS devices.
+- Fixed **snapshot restore** so data are loaded into the database.
+
+## v7.5.11 (November 10th, 2025; GA)
 
 ### Important Notice
 
@@ -413,3 +434,4 @@ In previous versions, optional fields were omitted from certain API responses if
   - Added toggle filter to show/hide IPv6 support information
 - The current status of the PostgreSQL database is now displayed on the [Status Page](../../IP_Fabric_GUI/tips/system_status.md) page.
   - From this page, users can also restart the PostgreSQL database if necessary.
+
