--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -6,7 +6,36 @@ search:
 
 # LLRN 7.5
 
-These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 961 fixed issues.
+These are low-level release notes for IP Fabric release branch `7.5`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don’t have access to the tickets. On the other hand, it can provide valuable information, if you are looking for a particular detail. This release branch contains a total of 978 fixed issues.
+
+## 7.5.12
+
+### Bugs
+
+Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
+
+- `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
+- `NIM-21683` -- High -- User with no rights gets `Unexpected Failure` error after login
+- `NIM-21695` -- Highest -- Unexpected API failure when loading STP instance members
+- `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results [DHL - 7.3]
+- `NIM-22038` -- High -- End2End path issue for Viptela
+- `NIM-22055` -- High -- MRoute Overview table does not load - Unexpected exception pg_strtoint32
+- `NIM-22063` -- Highest -- Time-based filtering in tables not working
+- `NIM-22071` -- High -- HP Comware - environment mapping issue
+- `NIM-22139` -- High -- Cisco nx-os - ipv6 routing table is not collected properly with bgp threshold turned on
+- `NIM-22141` -- High -- Checkpoint GAIA Embedded: version not detected
+- `NIM-22145` -- Highest -- Missing extensions after upgrade to 7.5
+- `NIM-22148` -- Medium -- New vendor can't be added from Snapshot Creation
+- `NIM-22160` -- High -- Not sending `_cmdline-mode on` for 3Com devices
+- `NIM-22170` -- High -- BC: Uptime not valid Integer
+- `NIM-22201` -- High -- Arista ip helper-address is not parsed/visible in IPF GUI
+- `NIM-22225` -- High -- Restore snapshot functionality does not work
+
+### Tasks
+
+Task may be associated into Epics or Stories to form complex features.
+
+- `NIM-21849` -- Medium -- F5 - Missing commands in the Feature matrix
 
 ## 7.5.11
 
@@ -22,7 +51,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-21954` -- High -- PSQL Slow Managed IPv4 address table
 - `NIM-21955` -- Highest -- Slow PSQL query for Snapshot Inventory table
 - `NIM-21995` -- High -- Missing data for not present power supplies for Cisco IOS-XE
-- `NIM-22018` -- Medium -- Management > Confguration - filter Status `no change` does not work
+- `NIM-22018` -- Medium -- Management > Configuration - filter Status `no change` does not work
 - `NIM-22064` -- Highest -- pre-upgrade-check timed out after 60 seconds due to IPF checker I/O
 - `NIM-22073` -- Highest -- Config import failing on required 'discovery-history'
 
@@ -1135,3 +1164,4 @@ Sub-tasks are very well contained work packages, organized under Tasks.
 - `NIM-19487` -- Medium -- F5OS - network - l2/l3 interfaces (RSeries)
 - `NIM-19581` -- Medium -- F5OS - network - neighbors - Velos
 - `NIM-19582` -- Medium -- F5OS - network - neighbors - RSeries
+
