fixup LLRN removed customer name

--- a/docs/releases/release_notes_low-level/7.x/7.3.md
+++ b/docs/releases/release_notes_low-level/7.x/7.3.md
@@ -15,7 +15,7 @@ These are low-level release notes for IP Fabric release branch `7.3`. Please not
 Anything that we considered an incorrect behavior. Something that was not working as expected or turned out that did not meet customers' demand.
 
 - `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
-- `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results [DHL - 7.3]
+- `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results
 - `NIM-22038` -- High -- End2End path issue for Viptela
 - `NIM-22050` -- Highest -- EoL Filter - Unexpected Failure
 
