--- a/docs/releases/release_notes_low-level/7.x/7.5.md
+++ b/docs/releases/release_notes_low-level/7.x/7.5.md
@@ -17,7 +17,7 @@ Anything that we considered an incorrect behavior. Something that was not workin
 - `NIM-20958` -- Highest -- Syslog worker reaching heap / memory limit
 - `NIM-21683` -- High -- User with no rights gets `Unexpected Failure` error after login
 - `NIM-21695` -- Highest -- Unexpected API failure when loading STP instance members
-- `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results [DHL - 7.3]
+- `NIM-21889` -- Highest -- E2E pathlookup - double zoneFw evaluation with different results
 - `NIM-22038` -- High -- End2End path issue for Viptela
 - `NIM-22055` -- High -- MRoute Overview table does not load - Unexpected exception pg_strtoint32
 - `NIM-22063` -- Highest -- Time-based filtering in tables not working
