ST-532 migrated 7.3.md and corrected all broken links

--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v7.x.x/7.3.md
@@ -42,11 +42,11 @@ Temporarily disabling both `NAT44` and `Zone firewall` discovery tasks for the
 Settings --> Disabled Discovery Tasks**) is the recommended hotfix until this
 issue is resolved in one of the upcoming releases.
 
-![Disabled Discovery Tasks](../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_list.webp)
+![Disabled Discovery Tasks](../../../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_list.webp)
 
-![Disable Zone firewall discovery task for FortiGate](../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_forti_zonefw.webp)
+![Disable Zone firewall discovery task for FortiGate](../../../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_forti_zonefw.webp)
 
-![Disable NAT44 discovery task for FortiGate](../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_forti_nat44.webp)
+![Disable NAT44 discovery task for FortiGate](../../../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_disabled_task_forti_nat44.webp)
 
 ## v7.3.24 (November 27th, 2025; GA)
 
@@ -79,13 +79,13 @@ MD5 (ESXi8.0-ipfabric-7-3-24+0.ova) = 37820bcfb30d96d8ca893b7877dbbea7
 ### Important Notice
 
 All new installations utilise the GPT disk partitioning scheme, while older versions and all pre-existing installations
-utilise the MBR partitioning scheme. More details can be found on [Server Disk Space Summary](../../System_Administration/increase_disk_space.md).
+utilise the MBR partitioning scheme. More details can be found on [Server Disk Space Summary](../../../../System_Administration/increase_disk_space.md).
 
 ### Improvements
 - Corrected version detection on Huawei YunShan devices
 - Added JSON output to ipf-checker
-- [Configuration import/export feature](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) now also includes manual links, saved filters and views, graph views, path lookup checks and advanced options, and graph positions
-- Added support for Discovery History in [Configuration import/export](../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) feature
+- [Configuration import/export feature](../../../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) now also includes manual links, saved filters and views, graph views, path lookup checks and advanced options, and graph positions
+- Added support for Discovery History in [Configuration import/export](../../../../IP_Fabric_Settings/system/Backup_and_Maintenance/configuration_import_export.md) feature
 - Fixed missing access points on Cisco WLC (wlc-air) platforms
 - Fixed wired hosts not appearing in **Inventory --> Hosts** despite being present in ARP tables
 - Fixed the `Status` column filter in **Management --> Configuration** so `no change` works correctly
@@ -152,9 +152,9 @@ The following known issue has been resolved. If symlink is not found, upgrade pr
 
 If the IP Fabric GUI redirects to the status page after an upgrade and displays errors such as **License Error**, **ArangoDB Disconnected**, or **Failed to load initial app data**, this may indicate an issue with the ArangoDB configuration.
 
-!["Failed to load initial app data" error](../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_app_data_error.webp){.center}
+!["Failed to load initial app data" error](../../../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_app_data_error.webp){.center}
 
-![License error](../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_license_error.webp){.center}
+![License error](../../../../images/miscellaneous/archive/releases-release_notes-previous_releases-IP_Fabric_v7.x.x-7.2_7.2_license_error.webp){.center}
 
  **To diagnose the issue:**
 
@@ -263,7 +263,7 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
   - IPv4 filters apply only to IPv4 addresses
   - IPv6 filters apply only to IPv6 addresses
 - Announcing the deprecation of path-based versioning in the following release.
-  More details can be found on the new [Versioning](../../IP_Fabric_API/versioning.md#api-version-in-url-path-deprecated) page.
+  More details can be found on the new [Versioning](../../../../IP_Fabric_API/versioning.md#api-version-in-url-path-deprecated) page.
 
 ##### Discovery Configuration Updates
 
@@ -276,7 +276,7 @@ Extended network discovery capabilities to support IPv6 networks alongside IPv4,
 #### Automated SSO
 
 - We have developed a new script to simplify the SSO setup process for the IP Fabric application. More details can be found on the
-  [Automated Single Sign-On (SSO)](../../IP_Fabric_Settings/administration/sso.md/#automated-sso-enablement-for-the-ipf-application) page.
+  [Automated Single Sign-On (SSO)](../../../../IP_Fabric_Settings/administration/sso.md/#automated-sso-enablement-for-the-ipf-application) page.
 
 ### Improvements
 
@@ -381,7 +381,7 @@ Support and they can assist you in restoring the rules.
 
 !!! info "IPv4 Managed IP Summary table"
 
-    As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
+    As of version `7.0`, the Managed Networks and Gateway Redundancy tables have been replaced by the [IPv4 Managed IP Summary table](../../../../IP_Fabric_GUI/technology_tables/addressing/ipv4-managed-ip-summary.md).
 
 #### GUI
 
@@ -414,7 +414,7 @@ is now fully supported at the API level and is also fully integrated into the UI
   !!! warning "Do not forget to update IAM policy"
 
       To collect Azure ExpressRoute Circuits, the corresponding IAM policy must be updated.
-      You can download the new policy [here](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_3.json).
+      You can download the new policy [here](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/Vendors_API/azure/azure-role-7_3.json).
 
 - **New Device -- Azure RouteServer (ARS)**
   - Initial support for data collection & inventory - end-to-end path lookup via Network Virtual Appliances has been improved.
@@ -431,7 +431,7 @@ is now fully supported at the API level and is also fully integrated into the UI
 - **New Device -- Meraki Cloud-managed Catalyst Switches**
   - Now discoverable via the Meraki API  
   - Identification: Firmware prefix `CS` and Monitoring Version (if present) must not be `1` - as `1` indicates the device in monitor-only mode.  
-  - Discovery can be disabled via [configuration flags](../../System_Administration/Command_Line_Interface/Configuration_Flags.md#meraki-catalyst-switches-discovery).
+  - Discovery can be disabled via [configuration flags](../../../../System_Administration/Command_Line_Interface/Configuration_Flags.md#meraki-catalyst-switches-discovery).
 
 #### Path Lookup
 
@@ -462,7 +462,7 @@ and enter the name of the list as it appears in the configuration.
 
 - **Device Attribute-Based Advanced Filters**
 now support **Uptime** as a device property.
-- For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
+- For a complete list of properties and supported tables, refer to [Technology Tables -- Device-Based Advanced Filters](../../../../IP_Fabric_GUI/technology_tables/index.md#device-based-advanced-filters).
 
 #### Intent Verification Rules
 
@@ -538,27 +538,27 @@ The below API endpoints have been marked as deprecated and the intention is to r
 
 ### Experimental Features
 
-Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
+Newly added features which need to be explicitly enabled in service files. You can enable these yourself using our [feature documentation](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md) or if you are not comfortable self-enabling these features or need further clarification, contact our Support or Solution Architect team. We will gladly help you.
 
 
 #### Cisco ACI Service Graphs Improvements
 
 The path lookup capability for Layer 2 (L2) has been added to Cisco ACI Service Graphs.
 
-To collect Service Graph data, the feature flag `ENABLE_ACI_SERVICEGRAPHS_ENDPOINTS` must be enabled. For more information, see [feature flag documentation](../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-service-graphs).
+To collect Service Graph data, the feature flag `ENABLE_ACI_SERVICEGRAPHS_ENDPOINTS` must be enabled. For more information, see [feature flag documentation](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md#aci-service-graphs).
 
 #### Palo Alto External Dynamic Lists
 
 The ingestion of Palo Alto's External Dynamic Lists for URL Filtering and IP Lists is currently available as an experimental feature.
 
-To access this functionality, respective [feature flags](../../System_Administration/Command_Line_Interface/Feature_Flags.md#palo-alto-external-dynamic-lists) must be enabled. (`ENABLE_PALOALTO_EDL_IPLIST` and `ENABLE_PALOALTO_EDL_URLLIST`).
+To access this functionality, respective [feature flags](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md#palo-alto-external-dynamic-lists) must be enabled. (`ENABLE_PALOALTO_EDL_IPLIST` and `ENABLE_PALOALTO_EDL_URLLIST`).
 
 #### Transparent Firewalls
 
 Initial support for **transparent firewalls** has been introduced. Since transparent firewalls typically operate at Layer 2 and remain **invisible to other network devices**,
 manual link configuration is required to incorporate them into the network model.
 
-To enable this feature, the corresponding [feature flag](../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) (`ENABLE_MANUAL_LINKS`) must be activated.
+To enable this feature, the corresponding [feature flag](../../../../System_Administration/Command_Line_Interface/Feature_Flags.md#enable-manual-links-transparent-firewall) (`ENABLE_MANUAL_LINKS`) must be activated.
 
 Once enabled, transparent firewalls will appear in the **graph topology**, and **basic path lookup** (excluding security policy evaluation) will be supported.
 
@@ -567,4 +567,5 @@ Once enabled, transparent firewalls will appear in the **graph topology**, and *
     In case that you want to edit **Manual Link Protocol Settings** --> **Line Cap Label** field, it incorrectly permits IP address selection.
 
 #### Manual Links
-New feature that allows you to create links manually. Full documentation can be found in [Manual Links](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/manual_links.md).
+
+New feature that allows you to create links manually. Full documentation can be found in [Manual Links](../../../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/manual_links.md).
