NIM-22254 Updates information GCP interconnect support

--- a/docs/releases/release_notes/7.8.md
+++ b/docs/releases/release_notes/7.8.md
@@ -131,7 +131,7 @@ All JavaScript-based services are now running on Node.js version `v22.19.0`.
     - Application rules with FQDN tags are not supported.
     - DNAT rules with FQDN are not supported.
     - Azure Firewall deployed in vWAN is not supported.
-- Added support for GCP interconnect.
+- Added support for GCP Partner Interconnect.
 
 ##### Meraki
 
