NIM-22266 Move note about time based settings API from RN to doc

--- a/docs/releases/release_notes/7.5.md
+++ b/docs/releases/release_notes/7.5.md
@@ -261,28 +261,8 @@ utilise the MBR partitioning scheme. More details can be found on [Server Disk S
 #### Time-Based Filtering for Discovery History Seeds
 
 We have introduced a new setting that allows users to precisely control which IP addresses from Discovery History are reused as seeds.
-
-**API Extension**
-
-This feature is configurable through a new `discoveryHistorySeeds` attribute in the existing `PATCH /settings` API. The attribute accepts an object with these properties:
-
-`enabled` *(required)* – Enables/disables seed reuse from Discovery History
-`daysLimit` *(optional)* – Restricts seed reuse to IPs discovered within the last X days
-`afterDate` *(optional)* – Restricts seed reuse to IPs discovered after a specified date
-
-!!! Note
-
-    `daysLimit` and `afterDate` are mutually exclusive — only one may be configured at a time.
-
-**Use Cases**
-
-| Scenario | Configuration |
-|--|--|
-| **Current Behavior** -- Use all IPs from Discovery History | `{ enabled: true }` |
-| **Disable seed reuse** | `{ enabled: false }` (preserves existing `daysLimit`/`afterDate` values)|
-| **Use only IPs discovered in the last 7 days** | `{ enabled: true, daysLimit: 7 }`|
-| **Use only IPs discovered after June 1, 2025** | `{ enabled: true, afterDate: "2025-06-01" }` |
-
+See [Time-Based Filtering for Discovery History Seeds](../../IP_Fabric_Settings/Discovery_and_Snapshots/Discovery_Settings/discovery_seeds.md#time-based-filtering-for-discovery-history-seeds) documentation
+for how to configure it.
 
 #### AWS Cloud
 
